logs/Slang/generated/yosys/errors_syntax_err01.sv.log
name: errors_syntax_err01
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/errors/syntax_err01.v
should_fail: 1
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/errors/syntax_err01.v:2:9: error: packed dimensions not allowed on predefined integer type 'integer'
integer [31:0]w;
        ^
